[package]
name = "fudd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive", "string"] }
lapin = "2.3.1"
rand = "0.8.5"
tokio = "1.36.0"
tokio-amqp = "2.0.0"



[dependencies.uuid]
version="1.7.0"
features = [
	"v4",
	"fast-rng",
]
